# three-body

./: .gitignore  pyproject.toml  readme.md  requirements.txt
code/: 2a_yin_yang_I.py  2b_yin_yang_I.py  3a_yin_yang_II.py  3b_yin_yang_II.py  BodySytem.py  ODESolver.py  bodySytem.py  bumblebee.py  butterfly_I.py  butterfly_II.py  butterfly_III.py  butterfly_IV.py  collisions.py  data_processing.py  dragonfly.py  figure_8 copy.py  figure_8.py  goggles.py  main.py  moth_I.py  moth_II.py  moth_III.py  orbit8_animation.py  orbits.toml  routes.py  test.py  yarn.py
code/Examples/: example_one.py  example_two.py
code/ODESolvers/: coefficients.py  methods.py  rungekutta.py  symplectic.py
code/utils/: data_conversion.py  orbit_loader.py  simulations.py
data/Butterfly_I/: Butterfly_I_Euler.json  Butterfly_I_Euler_runing_time.txt  Butterfly_I_RK4.json  Butterfly_I_RK4_runing_time.txt  Butterfly_I_RKF.json  Butterfly_I_RKF_runing_time.txt  Butterfly_I_Verlet.json  Butterfly_I_Verlet_runing_time.txt
data/Butterfly_II/: Butterfly_II_Euler.json  Butterfly_II_Euler_runing_time.txt  Butterfly_II_RK4.json  Butterfly_II_RK4_runing_time.txt  Butterfly_II_RKF.json  Butterfly_II_RKF_runing_time.txt  Butterfly_II_Verlet.json  Butterfly_II_Verlet_runing_time.txt
data/Figure-8/: Figure-8_Euler.json  Figure-8_Euler_runing_time.txt  Figure-8_Leapfrog.json  Figure-8_Leapfrog_runing_time.txt  Figure-8_RK4_runing_time.txt  Figure-8_RKF.json  Figure-8_RKF_runing_time.txt  Figure-8_Verlet.json  Figure-8_Verlet_runing_time.txt
data/Figure-8_2/: Figure-8_2_Euler.json  Figure-8_2_Euler_runing_time.txt  Figure-8_2_RK4.json  Figure-8_2_RK4_runing_time.txt  Figure-8_2_RK5.json
data/bumblebee/: bumblebee_Euler.json  bumblebee_Euler_runing_time.txt  bumblebee_RK4.json  bumblebee_RK4_runing_time.txt  bumblebee_RKF.json  bumblebee_RKF_runing_time.txt  bumblebee_Verlet.json  (+1 more)
report/: main.tex
(+23 files in other folders)
